--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-location.href = "https://dsc.gg/junarmc";
+location.href = "https://servers.eaglercraft.com/servers/169bad4e-d53c-4309-8886-666015aa0bef";
 </script>
